--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,8 +16,8 @@
     {% block form %}
     {% endblock %}
     {% endblock %}
-    <script src="//instant.page/5.1.0" type="module"
-        integrity="sha384-by67kQnR+pyfy8yWP4kPO12fHKRLHZPfEsiSXR8u2IKcTdxD805MGUXBzVPnkLHw"></script>
+    <!-- <script src="//instant.page/5.1.0" type="module"
+        integrity="sha384-by67kQnR+pyfy8yWP4kPO12fHKRLHZPfEsiSXR8u2IKcTdxD805MGUXBzVPnkLHw"></script> -->
     <a href="mailto:jkl2197@gmail.com?subject=Rostro enquiry"
         style="text-decoration: none; font-family: 'Noto Sans'; position: absolute; bottom: 0; left: 0; margin: 15px; color: #4881ff">contact
         the developer</a>
