--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="shortcut icon" href="{{ url_for('static', filename='assets/favicon.svg') }}"> -->
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/styles.css') }}">
-    {% block head %}{% endblock %}
+    <!-- {% block head %}{% endblock %} -->
     <title>ICS Rostering Made Easy | Rostro</title>
 </head>
 
