--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="shortcut icon" href="{{ url_for('static', filename='assets/favicon.svg') }}"> -->
+    <link rel="shortcut icon" href="{{ url_for('static', filename='assets/favicon.svg') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/styles.css') }}">
-    <!-- {% block head %}{% endblock %} -->
+    {% block head %}{% endblock %}
     <title>ICS Rostering Made Easy | Rostro</title>
 </head>
 
@@ -16,8 +16,8 @@
     {% block form %}
     {% endblock %}
     {% endblock %}
-    <!-- <script src="//instant.page/5.1.0" type="module"
-        integrity="sha384-by67kQnR+pyfy8yWP4kPO12fHKRLHZPfEsiSXR8u2IKcTdxD805MGUXBzVPnkLHw"></script> -->
+    <script src="//instant.page/5.1.0" type="module"
+        integrity="sha384-by67kQnR+pyfy8yWP4kPO12fHKRLHZPfEsiSXR8u2IKcTdxD805MGUXBzVPnkLHw"></script>
     <a href="mailto:jkl2197@gmail.com?subject=Rostro enquiry"
         style="text-decoration: none; font-family: 'Noto Sans'; position: absolute; bottom: 0; left: 0; margin: 15px; color: #4881ff">contact
         the developer</a>
