--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,7 +19,7 @@
     <script src="//instant.page/5.1.0" type="module"
         integrity="sha384-by67kQnR+pyfy8yWP4kPO12fHKRLHZPfEsiSXR8u2IKcTdxD805MGUXBzVPnkLHw"></script>
     <a href="mailto:jkl2197@gmail.com?subject=Rostro enquiry"
-        style="text-decoration: none; font-family: 'Noto Sans'; position: absolute; bottom: 0; left: 0; margin: 15px; color: #4881ff">contact
+        style="text-decoration: none; font-family: 'Noto Sans'; position: absolute; bottom: 0; left: 0; margin: 15px; color: #3ACF87">contact
         the developer</a>
 </body>
 
