--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,7 +6,7 @@
 <div class="body-container--primary">
     <div class="body-text--headers">
         <h1 style="display: flex; flex-direction: row; align-items: center; justify-content: center; padding-right: 50px;"><img src="static/assets/favicon.svg" style="height: 50px; margin-right: 15px;">Rostro</h1>
-        <h2>ICS rostering made <strong style="color: #4881ff">easy.</strong></h2>
+        <h2>ICS rostering made <strong style="color: #3ACF87">easy.</strong></h2>
         <div style="width: calc(40vw + 100px); max-width: 800px; height: 2px; background: rgb(190, 190, 190); margin-top: 18px;"></div>
     </div>
     <div class="body-text--descriptives">
