--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,7 +16,7 @@
         <h3>What's an .ics file?</h3>
         <p>An .ics file is a type of calendar file used by essentially all your devices. It's used by iCalendar, Google Calendar, Microsoft Outlook and many others calendar platforms.</p>
         <br>
-        <h3>So what's the benefit of that?</h3>
+        <h3>So what's the benefit?</h3>
         <p>You can import an .ics file into your favourite calendar platform and easily be able to check your roster from all your devices whenever, and wherever you want.</p>
         <br>
         <h3>How do I use Rostro?</h3>
