--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -7,31 +7,74 @@
     <div class="body-text--headers">
         <h1>Rostro</h1>
         <h2>Submit your roster below</h2>
+        <div
+            style="width: calc(40vw + 100px); max-width: 800px; height: 2px; background: rgb(190, 190, 190); margin-top: 18px;">
+        </div>
     </div>
     <form id=Rostro action='' method='post' novalidate enctype="multipart/form-data">
         {{form.hidden_tag()}}
+        <input name="roster" required size="32" type="file" id="roster" style="display:none" />
+        <label for="roster"
+            style="margin-bottom: 15px; display: flex; flex-direction: column; justify-content: center; align-items: center; height: 200px; width: 100%; background:#d2e3f0; border: 2px dashed rgb(22, 97, 167); border-radius: 20px;"
+            id="roster-select" ondrop="dropHandler(event);" ondragover="dragOverHandler(event);">
+            <p style="font-size: 16px;" id="file-select-text"><strong style="cursor:pointer;" class="upload-info">Choose
+                    an excel file</strong> or drag it here</p>
+        </label>
         <p>
             {{form.username}}
             {% for error in form.username.errors %}
             <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </p>
-        <p style="margin-top: 20px; margin-bottom: 10px;">
+        <p style="margin-top: 15px; margin-bottom: 10px;">
             {{ form.rostertype.label }}<br>
             {{ form.rostertype(size=32) }}
             {% for error in form.rostertype.errors %}
             <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </p>
-        <div style="margin-top: 20px; margin-bottom: 10px; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center;">
-            {{ form.roster.label }}<br>
-            {{ form.roster(size=32) }}
-            {% for error in form.roster.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
+        <div style="display: flex; align-items: center; justify-content: center; text-align: center;">{{form.submit()}}
         </div>
-        <div style="display: flex; align-items: center; justify-content: center; text-align: center;">{{form.submit()}}</div>
     </form>
 </div>
+<script>
+    function dropHandler(ev) {
+        console.log('File(s) dropped');
+
+        // document.getElementById('roster').style.background = '#000'
+
+        // Prevent default behavior (Prevent file from being opened)
+        ev.preventDefault();
+
+        if (ev.dataTransfer.items) {
+            // Use DataTransferItemList interface to access the file(s)
+            for (var i = 0; i < ev.dataTransfer.items.length; i++) {
+                // If dropped items aren't files, reject them
+                if (ev.dataTransfer.items[i].kind === 'file') {
+                    var file = ev.dataTransfer.items[i].getAsFile();
+                    document.getElementById("file-select-text").innerHTML = file.name
+                    console.log('... file[' + i + '].name = ' + file.name);
+                }
+            }
+        } else {
+            // Use DataTransfer interface to access the file(s)
+            for (var i = 0; i < ev.dataTransfer.files.length; i++) {
+                console.log('... file[' + i + '].name = ' + ev.dataTransfer.files[i].name);
+            }
+        }
+    }
+
+    function dragOverHandler(ev) {
+        console.log('File(s) in drop zone');
+        // document.getElementById("roster-select").style.background="#e6edf3"
+        // Prevent default behavior (Prevent file from being opened)
+        ev.preventDefault();
+    }
+</script>
+<style>
+    label:nth-child(1) {
+        font-weight: bold;
+    }
+</style>
 {% endblock %}
 {% endblock %}
