--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -13,7 +13,8 @@
     </div>
     <form id=Rostro action='' method='post' novalidate enctype="multipart/form-data">
         {{form.hidden_tag()}}
-        <input name="roster" required size="32" type="file" id="roster" style="display:none" />
+        <input name="roster" required size="32" type="file" id="roster" onchange='fileSelected()'
+            style="display:none" />
         <label for="roster"
             style="margin-bottom: 15px; display: flex; flex-direction: column; justify-content: center; align-items: center; height: 200px; width: 100%; background:#d2e3f0; border: 2px dashed rgb(22, 97, 167); border-radius: 20px;"
             id="roster-select" ondrop="dropHandler(event);" ondragover="dragOverHandler(event);">
@@ -38,6 +39,11 @@
     </form>
 </div>
 <script>
+    function fileSelected() {
+        console.log('e')
+        document.getElementById("file-select-text").innerHTML = document.getElementById("roster").value.replace(/^.*\\/, "")
+    }
+
     function dropHandler(ev) {
         console.log('File(s) dropped');
 
