--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -57,7 +57,7 @@
                 // If dropped items aren't files, reject them
                 if (ev.dataTransfer.items[i].kind === 'file') {
                     var file = ev.dataTransfer.items[i].getAsFile();
-                    document.getElementById("file-select-text").innerHTML = file.name + "<br><br><strong style='cursor:pointer' class='upload-info'>Click here</strong> to select a new file"
+                    document.getElementById("file-select-text").innerHTML = file.name + "<br><br><p>Drag and drop does not currently work</p><br><strong style='cursor:pointer' class='upload-info'>Click here</strong> to select a new file"
                     console.log('... file[' + i + '].name = ' + file.name);
                 }
             }
