--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -5,7 +5,7 @@
 {% block form %}
 <div class="body-container--primary">
     <div class="body-text--headers">
-        <h1>Rostro</h1>
+        <h1 style="display: flex; flex-direction: row; align-items: center; justify-content: center; padding-right: 50px;"><img src="static/assets/favicon.svg" style="width: 56.58px; margin-right: 15px;">Rostro</h1>
         <h2>Submit your roster below</h2>
         <div
             style="width: calc(40vw + 100px); max-width: 800px; height: 2px; background: rgb(190, 190, 190); margin-top: 18px;">
