--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,7 +13,7 @@
         <h3>What is Rostro?</h3>
         <p>Rostro takes your Excel roster file and converts it into an .ics file.</p>
         <br>
-        <h3>What's an .ics file?</h3>
+        <h3>What is an .ics file?</h3>
         <p>An .ics file is a type of calendar file used by essentially all your devices. It's used by iCalendar, Google Calendar, Microsoft Outlook and many others calendar platforms.</p>
         <br>
         <h3>So what's the benefit?</h3>
