--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -91,6 +91,10 @@
         margin-top: 20px;
         width: 350px;
     }
+
+    option {
+        text-align: center;
+    }
 </style>
 {% endblock %}
 {% endblock %}
