--- a/app/static/styles/styles.css
+++ b/app/static/styles/styles.css
@@ -31,7 +31,7 @@ input, button, textarea, select {
 	font: inherit;
 }
 
-p, h1, h2, h3, h4, h5, h6, label {
+p, h1, h2, h3, h4, h5, h6, label, div {
 	font-family: 'Noto Sans';
 	overflow-wrap: break-word;
 	user-select: none;
