--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,7 +18,7 @@
     {% endblock %}
     <script src="//instant.page/5.1.0" type="module"
         integrity="sha384-by67kQnR+pyfy8yWP4kPO12fHKRLHZPfEsiSXR8u2IKcTdxD805MGUXBzVPnkLHw"></script>
-    <a class="contact" href="mailto:jkl2197@gmail.com?subject=Rostro enquiry"
+    <a class="contact" href="mailto:james.rostrodev@gmail.com?subject=Rostro enquiry"
         style="text-decoration: none; font-family: 'Noto Sans'; position: absolute; bottom: 0; left: 0; margin: 15px;">contact
         the developer</a>
 </body>
