--- a/app/static/styles/styles.css
+++ b/app/static/styles/styles.css
@@ -88,6 +88,27 @@ h3 {
 		0px 20px 30px rgba(0, 0, 0, 0.05);
 }
 
+.body-container--mobile {
+	display: none;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	height: 80%;
+	width: 80vw;
+	margin: auto;
+	background: #fff;
+	border-radius: 25px;
+	padding: 7.5%;
+	text-align: center;
+	box-shadow:
+		0px 0.6px 0.8px rgba(0, 0, 0, 0.01),
+		0px 1.3px 2px rgba(0, 0, 0, 0.015),
+		0px 2.5px 3.8px rgba(0, 0, 0, 0.019),
+		0px 4.5px 6.7px rgba(0, 0, 0, 0.024),
+		0px 8.4px 12.5px rgba(0, 0, 0, 0.031),
+		0px 20px 30px rgba(0, 0, 0, 0.05);
+}
+
 .body-text--headers {
 	margin-top: 20px;
 	margin-bottom: 20px;
@@ -215,5 +236,15 @@ li {
 
 	p {
 		font-size: 0.8rem;
+	}
+}
+
+@media only screen and (max-width: 499px) {
+	.body-container--primary {
+		display: none;
+	}
+
+	.body-container--mobile {
+		display: flex;
 	}
 }
