--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -24,5 +24,15 @@
     </div>
     <a href="/form" class="btn-primary--next" id="to_form">CREATE MY CALENDAR</a>
 </div>
+<div class="body-container--mobile">
+    <div class="body-text--headers">
+        <h1 style="display: flex; flex-direction: row; align-items: center; justify-content: center; padding-right: 50px;"><img src="static/assets/favicon.svg" style="width: 56.58px; margin-right: 15px;">Rostro</h1>
+        <h2>ICS rostering made <strong style="color: #3ACF87">easy.</strong></h2>
+        <div style="width: calc(40vw + 100px); max-width: 800px; height: 2px; background: rgb(190, 190, 190); margin-top: 18px;"></div>
+    </div>
+    <div>
+        <span>At this stage Rostro is only viewable on computer.</span>
+    </div>
+</div>
 {% endblock %}
 {% endblock %}
