--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -26,8 +26,7 @@
 </div>
 <div class="body-container--mobile">
     <div class="body-text--headers">
-        <h1 style="display: flex; flex-direction: row; align-items: center; justify-content: center; padding-right: 50px; color: #3ACF87;"><img src="static/assets/favicon.svg" style="width: 56.58px; margin-right: 15px;">Rostro</h1>
-        <h1>test</h1>
+        <div style="display: flex; flex-direction: row; align-items: center; justify-content: center; padding-right: 50px; padding-bottom: 3px;"><img src="static/assets/favicon.svg" style="width: 56.58px; margin-right: 15px;"><h1 style="padding-bottom: 0;">Rostro</h1></div>
         <h2>ICS rostering made <strong style="color: #3ACF87">easy.</strong></h2>
         <div style="width: calc(40vw + 100px); max-width: 800px; height: 2px; background: rgb(190, 190, 190); margin-top: 18px;"></div>
     </div>
