--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,11 +16,9 @@
     {% block form %}
     {% endblock %}
     {% endblock %}
-    <script src="//instant.page/5.1.0" type="module"
-        integrity="sha384-by67kQnR+pyfy8yWP4kPO12fHKRLHZPfEsiSXR8u2IKcTdxD805MGUXBzVPnkLHw"></script>
-    <a class="contact" href="mailto:james.rostrodev@gmail.com?subject=Rostro enquiry"
-        style="text-decoration: none; font-family: 'Noto Sans'; position: absolute; bottom: 0; left: 0; margin: 15px;">contact
-        the developer</a>
+    <a class="contact" href="mailto:james.rostrodev@gmail.com?subject=Rostro enquiry" style="text-decoration: none; font-family: 'Noto Sans'; position: absolute; bottom: 0; left: 0; margin: 15px;">
+        contact the developer
+    </a>
 </body>
 
 </html>
