--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -33,14 +33,14 @@
 </div>
 <div class="body-container--mobile">
     <div class="body-text--headers">
-        <div class="logo-separator">
+        <div class="logo-separator" style="padding-right: 15px;">
             <img src="static/assets/favicon.svg" class="logo">
             <h1>Rostro</h1>
         </div>
         <h2>ICS rostering made <strong>easy.</strong></h2>
         <div class="header-separator"></div>
     </div>
-    <div>
+    <div class="body-text--descriptives">
         <span>At this stage Rostro is only viewable on a computer.</span>
     </div>
 </div>
