--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,7 +17,7 @@
     {% block form %}
     {% endblock %}
     {% endblock %}
-    <a class="contact" href="mailto:james.rostrodev@gmail.com?subject=Rostro enquiry" style="text-decoration: none; font-family: 'Noto Sans'; position: absolute; bottom: 0; left: 0; margin: 15px;">
+    <a class="contact" target="_blank" href="mailto:james.rostrodev@gmail.com?subject=Rostro enquiry" style="text-decoration: none; font-family: 'Noto Sans'; position: absolute; bottom: 0; left: 0; margin: 15px;">
         contact the developer
     </a>
 </body>
