--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -4,10 +4,10 @@
 {% block body %}
 <div class="body-container--primary">
     <div class="body-text--headers">
-        <div class="logo-separator">
+        <a href="https://rostro.icu/" class="logo-separator link">
             <img src="static/assets/favicon.svg" class="logo">
             <h1>Rostro</h1>
-        </div>
+        </a>
         <h2>ICS rostering made <strong>easy.</strong></h2>
         <div class="header-separator"></div>
     </div>
