--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,6 +20,7 @@
     <a class="contact" target="_blank" href="mailto:james.rostrodev@gmail.com?subject=Rostro enquiry" style="text-decoration: none; font-family: 'Noto Sans'; position: absolute; bottom: 0; left: 0; margin: 15px;">
         contact the developer
     </a>
+    <a class="watermark" target="_blank" href="https://ggaidelevicius.com">designed by gus</a>
 </body>
 
 </html>
