--- a/app/templates/success.html
+++ b/app/templates/success.html
@@ -5,7 +5,7 @@
 <div class="body-container--primary">
     <div class="body-text--headers">
         <a href="https://rostro.icu/" class="logo-separator link">
-            <img src="static/assets/favicon.svg" class="logo">
+            <img id="logo" src="static/assets/favicon.svg" class="logo">
             <h1>Rostro</h1>
         </a>
         <h2>ICS rostering made <strong>easy.</strong></h2>
