--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -28,7 +28,7 @@
             favourite calendar platform in seconds. It's that easy.</p>
     </div>
     <div class="body-buttons--primary">
-        <a href="/form" class="btn-primary--next" id="to_form" data-instant>CREATE MY CALENDAR</a>
+        <a href="/form" class="btn-primary--next" id="to_form">CREATE MY CALENDAR</a>
     </div>
 </div>
 <div class="body-container--mobile">
