--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -4,7 +4,7 @@
 {% block body %}
 <div class="body-container--primary">
     <div class="body-text--headers">
-        <a href="https://rostro.icu/" class="logo-separator link">
+        <a href="http://rostro.icu/" class="logo-separator link">
             <img id="logo" src="static/assets/favicon.svg" class="logo">
             <h1>Rostro</h1>
         </a>
