--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/styles.css') }}">
     <link rel="preload" as="image" href="static/assets/favicon.svg">
     {% block head %}{% endblock %}
-    <title>ICS Rostering Made Easy | Rostro</title>
+    <title>Shift To Your Own Calendar | Rostro</title>
 </head>
 
 <body>
