--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,7 +8,7 @@
             <img id="logo" src="static/assets/favicon.svg" class="logo">
             <h1>Rostro</h1>
         </a>
-        <h2>ICS rostering made <strong>easy.</strong></h2>
+        <h2>Shift to your <strong>own</strong> calendar.</h2>
         <div class="header-separator"></div>
     </div>
     <div class="body-text--descriptives">
@@ -37,7 +37,7 @@
             <img src="static/assets/favicon.svg" class="logo">
             <h1>Rostro</h1>
         </div>
-        <h2>ICS rostering made <strong>easy.</strong></h2>
+        <h2>Shift to your <strong>own</strong> calendar.</h2>
         <div class="header-separator"></div>
     </div>
     <div class="body-text--descriptives">
