--- a/app/templates/success.html
+++ b/app/templates/success.html
@@ -8,12 +8,13 @@
             <img id="logo" src="static/assets/favicon.svg" class="logo">
             <h1>Rostro</h1>
         </a>
-        <h2>ICS rostering made <strong>easy.</strong></h2>
+        <h2>Shift to your <strong>own</strong> calendar.</h2>
         <div class="header-separator"></div>
     </div>
     <div class="body-text--descriptives">
         <span style="margin-top: 10px; text-align: center; font-family: 'Noto Sans'; color: #2e2e2e; font-size: 18px;">Great news, <span style="text-transform: capitalize; display: inline; color: #3acf87; font-weight: bold; font-size: 18px;">{{username}}</span>!</span>
         <span style="margin-top: 10px; text-align: center; font-family: 'Noto Sans'; color: #2e2e2e; font-size: 18px;">We found and converted <span style="display: inline; color: #3acf87; font-weight: bold; font-size: 18px;">{{shiftcount}} shifts</span>.</span>
+        <span style="margin-top: 10px; text-align: center; font-family: 'Noto Sans'; color: #2e2e2e; font-size: 18px;">Now, just open it with the calendar app of your choice.</span>
     </div>
     <div class="body-buttons--primary" style="margin-bottom: 11.5%;">
         <a href="{{ url_for('download', filename = filename) }}" class="btn-primary--next" id="to_form">DOWNLOAD MY CALENDAR</a>
