--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -31,7 +31,7 @@
         <a href="/form" class="btn-primary--next" id="to_form">CREATE MY CALENDAR</a>
     </div>
 </div>
-<div class="body-container--mobile">
+<!-- <div class="body-container--mobile">
     <div class="body-text--headers">
         <div class="logo-separator" style="padding-right: 15px;">
             <img src="static/assets/favicon.svg" class="logo">
@@ -43,5 +43,5 @@
     <div class="body-text--descriptives">
         <span>At this stage Rostro is only viewable on a computer.</span>
     </div>
-</div>
+</div> -->
 {% endblock %}
