--- a/app/static/styles/styles.css
+++ b/app/static/styles/styles.css
@@ -69,7 +69,7 @@ h3 {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: center;
+	/* justify-content: center; */
 	min-height: 700px;
 	height: 50%;
 	width: calc(66vw + 50px);
@@ -77,7 +77,7 @@ h3 {
 	margin: auto;
 	background: #fff;
 	border-radius: 25px;
-	padding: 7.5%;
+	padding: 25px 25px;
 	text-align: center;
 	box-shadow:
 		0px 0.6px 0.8px rgba(0, 0, 0, 0.01),
@@ -109,7 +109,7 @@ h3 {
 		0px 20px 30px rgba(0, 0, 0, 0.05);
 }
 
-.body-text--headers, .body-text--descriptives, .body-buttons-primary, .logo-separator {
+.body-text--headers, .body-text--descriptives, .body-buttons--primary, .logo-separator {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -117,7 +117,8 @@ h3 {
 }
 
 .body-text--headers {
-	height: 20%;
+	justify-content: flex-start;
+	justify-self: flex-start;
 }
 
 .link {
@@ -125,7 +126,8 @@ h3 {
 }
 
 .body-text--descriptives {
-	height: 70%;
+	height: clamp(100px, 70%, 500px);
+	/* height: 70%; */
 }
 
 .body-buttons--primary {
@@ -266,9 +268,32 @@ strong {
 	align-items: center;
 }
 
+.drop-file {
+	margin-bottom: 15px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	height: 240px;
+	width: 100%;
+	background: #d2e3f0;
+	border: 2px dashed #1661a7;
+	border-radius: 20px;
+}
+
 ::-webkit-file-upload-button {
 	display: none;
 }
+
+.success-span {
+	margin-top: 10px;
+	text-align: center;
+	font-family: 'noto sans';
+	color: #2e2e2e;
+	font-size: 18px;
+}
+
+
 
 @media only screen and (max-width: 1031px) {
 	p {
@@ -277,16 +302,45 @@ strong {
 }
 
 @media only screen and (max-width: 499px) {
-	.body-container--primary {
-		display: none;
-	}
-
-	.body-container--mobile {
-		display: flex;
-	}
-
 	.header-separator {
-		min-width: 200px;
+		min-width: 120px;
+	}
+
+	.logo {
+		width: 42.435px;
+		margin-right: 11.25px;
+	}
+
+	.logo-separator {
+		padding-right: 42.425px;
+	}
+
+	h1 {
+		font-size: 40px;
+	}
+
+	h2 {
+		font-size: 18px;
+	}
+
+	h3 {
+		font-size: 16px;
+	}
+	
+	p, span, .success-span {
+		font-size: 12.5px;
+	}
+
+	.btn-primary--next, .drop-file, #Rostro, input[type=text] {
+		min-width: 100%;
+	}
+
+	#Rostro, input[type=text] {
+		width: 90%;
+	}
+
+	.btn-success {
+		font-size: 12px;
 	}
 }
 
@@ -294,4 +348,8 @@ strong {
 	.body-container--primary {
 		min-height: 750px;
 	}
+}
+
+.btn-success {
+	min-width: 0;
 }
