--- a/app/static/styles/styles.css
+++ b/app/static/styles/styles.css
@@ -9,7 +9,6 @@
 }
 
 html, body {
-	height: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -344,11 +343,11 @@ strong {
 	}
 }
 
-@media only screen and (max-width: 650px) {
+/* @media only screen and (max-width: 650px) {
 	.body-container--primary {
 		min-height: 750px;
 	}
-}
+} */
 
 .btn-success {
 	min-width: 0;
