--- a/app/static/styles/styles.css
+++ b/app/static/styles/styles.css
@@ -18,6 +18,7 @@ html, body {
 body {
 	line-height: 1.5;
 	-webkit-font-smoothing: antialiased;
+	padding: clamp(20px, 5%, 100px);
 }
 
 img, picture, video, canvas, svg {
