--- a/app/static/styles/styles.css
+++ b/app/static/styles/styles.css
@@ -70,8 +70,7 @@ h3 {
 	flex-direction: column;
 	align-items: center;
 	/* justify-content: center; */
-	min-height: 700px;
-	height: 50%;
+	height: clamp(700px, 50%, 1000px);
 	width: calc(70vw + 50px);
 	max-width: 1000px;
 	margin: auto;
