--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -32,7 +32,7 @@
     {% block form %}
     {% endblock %}
     {% endblock %}
-    <a class="contact" target="_blank" href="mailto:james.rostrodev@gmail.com?subject=Rostro enquiry" style="text-decoration: none; font-family: 'Noto Sans'; position: absolute; bottom: 0; left: 0; margin: 15px;">
+    <a class="contact" target="_blank" href="mailto:james.rostrodev@gmail.com?subject=Rostro enquiry" style="text-decoration: none; font-family: 'Noto Sans'; position: relative; margin-top: 50px; align-self: flex-start;">
         contact the developer
     </a>
 </body>
