--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -38,7 +38,7 @@
         </a>
         <div style="width: 50%; position: relative; display: flex; flex-direction: column;">
             <a id="watermark-gus" style="position: relative; font-size: 10px; color: #dadada; text-decoration: none; align-self: flex-end;" target="_blank" href="https://ggaidelevicius.com">designed by gus</a>
-            <a id="watermark-james" style="position: relative; font-size: 10px; color: #dadada; text-decoration: none;  align-self: flex-end;" target="_blank" href="https://rostro.icu">Rostro made by James Lawson</a>
+            <a id="watermark-james" style="position: relative; font-size: 10px; color: #dadada; text-decoration: none;  align-self: flex-end;" target="_blank" href="https://rostro.icu">Rostro by James Lawson</a>
         </div>
     </div>
 </body>
