--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,7 +33,7 @@
     {% endblock %}
     {% endblock %}
     <div style="display: flex; flex-direction: row; position: relative; margin-top: 50px; width: 100%; height: 30px;">
-        <a class="contact" target="_blank" href="mailto:james.rostrodev@gmail.com?subject=Rostro enquiry" style="width: 50%; text-decoration: none; font-family: 'Noto Sans'; position: relative; align-self: flex-start;">
+        <a class="contact" target="_blank" href="mailto:james.rostrodev@gmail.com?subject=Rostro enquiry" style="font-size: 14px; width: 50%; text-decoration: none; font-family: 'Noto Sans'; position: relative; align-self: flex-start; white-space: nowrap;">
             contact the developer
         </a>
         <div style="width: 50%; position: relative; display: flex; flex-direction: column;">
