--- a/app/static/styles/styles.css
+++ b/app/static/styles/styles.css
@@ -102,6 +102,12 @@ input {
 		0px 20px 30px rgba(0, 0, 0, 0.05);
 }
 
+@media only screen and (max-width: 499px) {
+	.body-container--primary {
+		padding: 25px 25px;
+	}
+}
+
 .body-container--mobile {
 	display: none;
 	flex-direction: column;
