--- a/app/templates/success.html
+++ b/app/templates/success.html
@@ -11,21 +11,16 @@
         <h2>Shift to your <strong>own</strong> calendar.</h2>
         <div class="header-separator"></div>
     </div>
-    <div class="body-text--descriptives">
+    <div class="body-text--descriptives success-success">
         <span class="success-span">Great news, <span style="text-transform: capitalize; display: inline; color: #3acf87; font-weight: bold;">{{username}}</span>!</span>
         <span class="success-span">We found and converted <span style="display: inline; color: #3acf87; font-weight: bold;">{{shiftcount}} shifts</span>.</span>
         <span class="success-span">Now, just open it with the calendar app of your choice.</span>
     </div>
-    <div class="body-buttons--primary" style="margin-bottom: 11.5%;">
+    <div class="body-buttons--primary">
         <a href="{{ url_for('download', filename = filename) }}" class="btn-primary--next btn-success" id="to_form">DOWNLOAD MY CALENDAR</a>
         <div style="margin: 5% 0"></div>
         <a href="/form" class="btn-primary--next-alt btn-success" id="to_form">CREATE ANOTHER CALENDAR</a>
     </div>
-</div>
-<div>
-
-
-</div>
 </div>
 
 {% endblock %}
