--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -8,7 +8,7 @@
             <img id="logo" src="static/assets/favicon.svg" class="logo">
             <h1>Rostro</h1>
         </a>
-        <h2>Shift to your <strong>own</strong> calendar.</h2>
+        <h2>Shift to your own calendar.</h2>
         <div class="header-separator"></div>
     </div>
     <div class="body-text--descriptives">
