--- a/app/templates/success.html
+++ b/app/templates/success.html
@@ -5,7 +5,7 @@
 <div class="body-container--primary">
     <div class="body-text--headers">
         <a href="://rostro.icu/" class="logo-separator link">
-            <img id="logo" src="static/assets/favicon.svg" class="logo">
+            <img id="logo" src="static/assets/favicon.svg" class="logo" alt="rostro logo">
             <h1>Rostro</h1>
         </a>
         <h2>Shift to your own calendar.</h2>
