--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,6 +15,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Rostro makes staying up to date with your roster easy. Convert your excel file into an ics file in seconds.">
     <meta http-equiv="Cache-control" content="public">
     <link rel="shortcut icon" href="{{ url_for('static', filename='assets/favicon.svg') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/styles.css') }}">
